//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "SharedEnumConfig.proto";

package com.lvl6.proto;

option java_outer_classname = "ResearchsProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


//------------------------------------------------------------------------------------------
 
message ResearchProto {
	optional int32 researchId = 1;
	
	//reducing resource cost or speed
	//TODO: turn into enum later on
	//optional ResearchType researchType = 2;
	optional ResearchType researchType = 2; 
	
	//battle, resources, restorative/healing
	//TODO: turn into enum later on
	//optional ResearchDomain researchDomain = 3;
	optional ResearchDomain researchDomain = 3;
	
	optional string iconImgName = 4;
	optional string name = 5;
	
	//the research that is before this research in the research tree
	optional int32 predId = 6;
	
	//the research that is after this research in the research tree
	optional int32 succId = 7;
	
	optional string desc = 8;
	optional int32 durationMin = 9;
	optional int32 costAmt = 10;
	optional ResourceType costType = 11;

	repeated ResearchPropertyProto properties = 12;
	
	optional int32 level = 13;
	optional float priority = 14;
	optional int32 tier = 15;
	optional int32 strength = 16;
	
}

message ResearchPropertyProto {
	optional int32 researchPropertyId = 1;
	
	//TODO: should be an enum later on
	optional string name = 2;
	
	//Do not use the word 'value'
	optional float researchValue = 3; 
	
	optional int32 researchId = 4;
}


enum ResearchType {
	NO_RESEARCH = 1;
	HP_INCREASE = 2;
 	ATTACK_INCREASE = 3;
 	SPEED_INCREASE = 4;
    HEALING_COST = 5;
    HEALING_SPEED = 6;
 	ENHANCE_COST = 7;
 	DECREASE_ENHANCE_TIME = 8;
    XP_BONUS = 9;
	INCREASE_HOSPITAL_QUEUE = 10;
	INCREASE_ENHANCE_QUEUE = 11;
	NUMBER_OF_HOSPITALS = 12;
	INCREASE_CONSTRUCTION_SPEED = 13;
	ITEM_PRODUCTION_SPEED = 14;
	ITEM_PRODUCTION_COST = 15;
	RESOURCE_PRODUCTION = 16;
	RESOURCE_STORAGE = 17;
	UNLOCK_ITEM = 18;
	UNLOCK_OBSTACLE = 19;
	RESOURCE_GENERATOR_STORAGE = 20;
}

enum ResearchDomain {
	NO_DOMAIN = 1;
	HEALING = 2;
	ENHANCING = 3;
	BATTLE = 4;
	RESOURCES = 5;
	ITEMS = 6;
	TRAPS_AND_OBSTACLES = 7;
	
}

//the research that is currently being researched and the research that are completed
message UserResearchProto {
	optional string userResearchUuid = 1;
	optional string userUuid = 2;
	optional int32 researchId = 3;
	optional int64 timePurchased = 4;
	optional bool complete = 5;
}


message AllUserResearchProto {
	optional string userUuid = 1;
	repeated UserResearchProto userResearch = 2;
}





